--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ Flask==2.3.3
 requests==2.26.0
 requests-oauthlib==1.3.0
 paho-mqtt==1.6.1
+numpy==1.26.4
 pandas==2.2.2
+scikit-learn==1.5.2
 openpyxl==3.1.5
 tkcalendar==1.6.1
 python-dateutil==2.8.2
